# myqueue

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  README.rst  config.py  mypy.ini  pylintrc  pyproject.toml  pytest.ini  setup.py
docs/: api.rst  cli.rst  conf.py  configuration.rst  development.rst  documentation.rst  example_config.py  howitworks.rst  howto.rst  index.rst  installation.rst  joss.txt  paper.bib  paper.md  quickstart.rst  releasenotes.rst  tutorial.rst  workflow.py  workflows.rst
docs/prime/: check.py  factor.py  workflow.py
myqueue/: __init__.py  caching.py  cli.py  commands.py  complete.py  config.py  crontab.py  daemon.py  docs.py  email.py  errors.py  hmm.py  hold.py  info.py  job.py  kick.py  local.py  logo.py  ls.py  lsf.py  migration.py  modify.py  pbs.py  pretty.py  progress.py  queue.py  remove.py  resources.py  resubmit.py  run.py  runner.py  scheduler.py  selection.py  slurm.py  sql.py  states.py  submitting.py  syncronize.py  task.py  tasks.py  (+3 more)
myqueue/schedulers/: __init__.py  local.py  lsf.py  pbs.py  scheduler.py  slurm.py  test.py
myqueue/test/: __init__.py  caching_test.py  complete_test.py  conftest.py  daemon_test.py  docs.py  error_msg_test.py  flow1.py  flow2.py  local_test.py  lock_test.py  more.py  more_test.py  mq.py  mq_test.py  name_test.py  resources_test.py  rst_test.py  runner.py  scheduler.py  scheduler_test.py  sqlite_test.py  task_test.py  test_caching.py  test_complete.py  test_config.py  test_daemon.py  test_local.py  test_more.py  test_mq.py  test_notify.py  test_rst.py  test_utils.py  test_workflow.py  testrunner.py  tests.py  workflow.py  workflow_test.py
q2/: __main__.py  cli.py  commands.py  complete.py  config.py  job.py  jobs.py  local.py  queue.py  runner.py  slurm.py  test.py  utils.py
q2/test/: __init__.py  tests.py  workflow.py
