[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myqueue"
description = "Simple job queue"
version = "23.3.0"
readme = "README.rst"
dependencies = ["rich", "networkx", "typing_extensions"]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering"]
# package_data={'myqueue': ['py.typed']},
# entry_points={'console_scripts': ['mq = myqueue.cli:main']},

[project.urls]
homepage = "https://myqueue.readthedocs.io/"
repository = "https://gitlab.com/myqueue/myqueue/"
changelog = "https://myqueue.readthedocs.io/en/latest/releasenotes.html"
docs = "https://myqueue.readthedocs.io/"
issues = "https://gitlab.com/myqueue/myqueue/-/issues"
matrix = "https://matrix.to/#/#myqueue:matrix.org"

